--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html>
 <head>
   <title>Add Student</title>
@@ -16,8 +16,8 @@
 <button onclick="addStudent()">Add Student</button>
 
 <script>
-const supabaseUrl = "https://nqobmiqnwddranpyxsl.supabase.co";
-const supabaseKey = "PASTE_YOUR_PUBLISHABLE_KEY_HERE";
+const supabaseUrl = "https://nqobmiqnwdldranpyxsl.supabase.co";
+const supabaseKey = "sb_publishable_eQReGHybx0Oj9G65eqWn-w_x_OjsbWB";
 
 const supabase = supabase.createClient(supabaseUrl, supabaseKey);
 
@@ -85,3 +85,4 @@ async function addStudent() {
 
 </body>
 </html>
+
